Remove Collections#unmodifiableMap() calls
Use methods from Map instead.